--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
     implementation project(path: ':marker')
+    implementation fileTree(dir: 'C:\\Users\\Gyuricza Ádám\\.m2\\repository\\hu\\gyuriczaadam\\AnnotationProcessorPlayground\\marker\\1.0.0-SNAPSHOT', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
